[package]
name = "when"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.51"
argh = "0.1.6"
chrono = "0.4.19"
chrono-tz = { git = "https://github.com/mitsuhiko/chrono-tz", rev = "00402ad500624963913a6e907feadbbb5ae5e074" }
localzone = "0.1.0"
pest = "2.1.3"
pest_derive = "2.1.0"
