[package]
name = "when-cli"
version = "0.2.0"
edition = "2021"
authors = ["Armin Ronacher <armin.ronacher@active-4.com>"]
license = "Apache-2.0"
description = "a command line tool for converting times between timezones"
repository = "https://github.com/mitsuhiko/when"
keywords = ["timezone", "convert", "cli"]
readme = "README.md"

[[bin]]
name = "when"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.51"
argh = "0.1.6"
chrono = "0.4.19"
chrono-tz = "0.6.1"
console = "0.15.0"
localzone = "0.1.0"
pest = "2.1.3"
pest_derive = "2.1.0"
