[package]
name = "when-cli"
version = "0.3.0"
edition = "2021"
authors = ["Armin Ronacher <armin.ronacher@active-4.com>"]
license = "Apache-2.0"
description = "a command line tool for converting times between timezones"
repository = "https://github.com/mitsuhiko/when"
keywords = ["timezone", "convert", "cli"]
readme = "README.md"

[[bin]]
name = "when"
path = "src/main.rs"

[dependencies]
libwhen = { path = "../libwhen" }
anyhow = "1.0.51"
chrono = { version = "0.4.19", features = ["serde"] }
chrono-tz = "0.6.1"
clap = { version = "3.0.0-rc.0", features = ["color", "derive", "cargo", "wrap_help"] }
console = "0.15.0"
localzone = "0.2.0"
pest = "2.1.3"
pest_derive = "2.1.0"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.72"
